2015-01-13  Hunseop Jeong  <hs85.jeong@samsung.com>

        Fix TestWTF failed in TestWebKitAPI
        https://bugs.webkit.org/show_bug.cgi?id=140333

        Reviewed by Sam Weinig.

        Clear the std::ostringstream before starting test.

        * TestWebKitAPI/Tests/WTF/RefLogger.h:
        (TestWebKitAPI::DerivedRefLogger::DerivedRefLogger):

2015-01-13  Michael Catanzaro  <mcatanzaro@igalia.com>

        TestWebKitWebContext depends on British English spellcheck dictionary
        https://bugs.webkit.org/show_bug.cgi?id=140403

        Reviewed by Martin Robinson.

        Install all English hunspell dictionaries on Fedora and Arch.

        * gtk/install-dependencies:

2015-01-13  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] install-dependencies should grok dnf
        https://bugs.webkit.org/show_bug.cgi?id=140396

        Reviewed by Martin Robinson.

        Fedora: install dependencies with dnf if yum is not installed.

        * gtk/install-dependencies:

2015-01-12  Hunseop Jeong  <hs85.jeong@samsung.com>

        [EFL][GTK] Fix build after r178309  
        https://bugs.webkit.org/show_bug.cgi?id=140381

        Reviewed by Gyuyoung Kim.

        * TestWebKitAPI/CMakeLists.txt: Added the API directory

2015-01-11  Sam Weinig  <sam@webkit.org>

        Remove support for SharedWorkers
        https://bugs.webkit.org/show_bug.cgi?id=140344

        Reviewed by Anders Carlsson.

        * Scripts/webkitperl/FeatureList.pm:

2015-01-12  Anders Carlsson  <andersca@apple.com>

        Make delegates conform to formal delegate protocols
        https://bugs.webkit.org/show_bug.cgi?id=140370

        Reviewed by Dan Bernstein.

        * DumpRenderTree/mac/TestRunnerMac.mm:
        (TestRunner::numberOfPendingGeolocationPermissionRequests):
        (TestRunner::setGeolocationPermission):

2015-01-10  Michael Catanzaro  <mcatanzaro@igalia.com>

        build-webkit: silence output of 'which'